--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 ---
 layout: default
-title: Engineer on the Web, iOS and Mac
+title: 
 ---
 <header class="home_header">
-  <h1><a href="/">Jonathan Cremin</a></h1>
+  <h1><a href="/">Swaroop Vattam</a></h1>
   <!-- About -->
   <div id="about">
-    I'm a software engineer living in Dublin and working at <a href="https://www.udemy.com">Udemy</a>.
-    I build stuff for Mac, iOS, and the web, like <a href="https://hostr.co">Hostr</a> and <a href="https://match.audio">Match Audio</a>.
-    Want to get in touch? Email <a href="mailto:jonathan@crem.in">jonathan@crem.in</a> or tweet <a href="https://twitter.com/kudoz">@kudoz</a>.
+    I'm a technical staff member at <a href="https://www.udemy.com">Lincoln Lab</a> at MIT. Previously, I was a research scientist in the <a href="https://www.cc.gatech.edu/">College of Computing</a> at Georgia Tech and a postdoctoral researcher at <a href="https://www.nrl.navy.mil/">NRL</a> through a fellowship awarded by the <a href="http://www.nationalacademies.org/">National Academies of Sciences</a>. I received my PhD in Computer Science from Georgia Tech in 2012. My research is broadly focused on applications of machine reasoning and machine learning to natural language processing problems.
   </div>
 </header>
 
