--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title:
   <h1><a href="/">Swaroop Vattam</a></h1>
   <!-- About -->
   <div id="about">
-    I'm a technical staff member at <a href="https://www.udemy.com">Lincoln Lab</a> at MIT. Previously, I was a research scientist in the <a href="https://www.cc.gatech.edu/">College of Computing</a> at Georgia Tech and a postdoctoral researcher at <a href="https://www.nrl.navy.mil/">NRL</a> through a fellowship awarded by the <a href="http://www.nationalacademies.org/">National Academies of Sciences</a>. I received my PhD in Computer Science from Georgia Tech in 2012. My research is broadly focused on applications of machine reasoning and machine learning to natural language processing problems.
+    I'm a technical staff member at <a href="https://www.ll.mit.edu/">Lincoln Lab</a> at MIT. Previously, I was a research scientist in the <a href="https://www.cc.gatech.edu/">College of Computing</a> at Georgia Tech and a postdoctoral researcher at <a href="https://www.nrl.navy.mil/">NRL</a> through a fellowship awarded by the <a href="http://www.nationalacademies.org/">National Academies of Sciences</a>. I received my PhD in Computer Science from Georgia Tech in 2012. My research is broadly focused on applications of machine reasoning and machine learning to natural language processing problems.
   </div>
 </header>
 
