--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ title:
 
   <hr />
 
-  <h3>Recent Posts</h3>
+  <h3>All Posts</h3>
   <ul class="list-unstyled more">
-  {% for post in site.posts limit:3 %}
+  {% for post in site.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
   </ul>
